--- a/template/iCMS/mobile/public.common.htm
+++ b/template/iCMS/mobile/public.common.htm
@@ -1,4 +1,4 @@
-  <a class="circle" id="iCMS-scrollUp"><i class="fa fa-angle-double-up"></i></a>
+ <a class="circle" id="iCMS-scrollUp"><i class="fa fa-angle-double-up"></i></a>
   <div id="iCMS-MODAL" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="iCMS-MODALLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -49,3 +49,5 @@
     </div>
     <div class="menu_right"> <span class="circle menu_close"><i class="fa fa-times"></i></span> </div>
   </nav>
+
+<!--{include file="/iCMS/public.dialog.htm"}-->
