--- a/template/iCMS/mobile/user/home.htm
+++ b/template/iCMS/mobile/user/home.htm
@@ -13,7 +13,7 @@
       <div class="wrapper" id="iCMS-userApp">
         <div class="userApp_header">
           <p class="userApp_cover">
-            <img class="userApp_cover_img" src="<!--{$userdata.coverpic}-->"  onerror="iCMS.user.nocover();"></a>
+            <img class="userApp_cover_img" src="<!--{$user.coverpic.mo}-->" onerror="iCMS.user.nocover('m');"></a>
           </p>
           <p class="userApp_name">
             <a href="<!--{$user.urls.home}-->"><!--{$user.nickname}--></a>
