--- a/template/iCMS/mobile/user/manage.htm
+++ b/template/iCMS/mobile/user/manage.htm
@@ -26,6 +26,8 @@
             <!--{include file="./manage/article.htm" import="true"}-->
           <!--{case value="comment"}-->
             <!--{include file="./manage/comment.htm" import="true"}-->
+          <!--{case value="inbox"}-->
+            <!--{include file="./manage/inbox.htm" import="true"}-->
         <!--{/switch}-->
         </div>
       </div>
