--- a/template/iCMS/mobile/user/manage/article.htm
+++ b/template/iCMS/mobile/user/manage/article.htm
@@ -47,10 +47,10 @@
 							<span class="action">
 								<a class="btn btn-primary btn-xs" href="<!--{$article.edit}-->&id=<!--{$article_list.id}-->" title="编辑文章"><i class="fa fa-edit"></i> 编辑</a>
 								<!--{if $article_list.status=="2"}-->
-								<a href="javascript:;" class="btn btn-default btn-danger btn-xs" data-id="<!--{$article_list.id}-->" data-action="delete" title="彻底删除"><i class="fa fa-times"></i> 删除</a>
+								<a href="javascript:;" class="btn btn-danger btn-xs" data-id="<!--{$article_list.id}-->" data-action="delete" title="彻底删除"><i class="fa fa-times"></i> 删除</a>
 								<a href="javascript:;" class="btn btn-default btn-xs" data-id="<!--{$article_list.id}-->" data-action="renew" title="还原"><i class="fa fa-reply-all"></i> 还原</a>
 								<!--{else}-->
-								<a href="javascript:;" class="btn btn-default btn-warning btn-xs" data-id="<!--{$article_list.id}-->" data-action="trash" title="删除到回收站"><i class="fa fa-trash-o"></i> 回收站</a>
+								<a href="javascript:;" class="btn btn-warning btn-xs" data-id="<!--{$article_list.id}-->" data-action="trash" title="删除到回收站"><i class="fa fa-trash-o"></i> 回收站</a>
 								<!--{/if}-->
 							</span>
 						</div>
@@ -60,10 +60,10 @@
 			</tbody>
 			<tfoot>
 	            <tr>
-	              <td colspan="5"><div class="iCMS_pagination"><!--{$iCMS.PAGES|method:'show(9)'}--></div></td>
-	            </tr>
-	            <tr>
-	              <td colspan="5"><div class="iCMS_pagination"><!--{$iCMS.PAGES|method:'current_page():bartext()'}--></div></td>
+	              <td colspan="5">
+	              	<div class="iCMS_pagination"><!--{$iCMS.PAGES|method:'current_page():bartext()'}--></div>
+	              	<div class="iCMS_pagination"><!--{$iCMS.PAGES|method:'show(9)'}--></div>
+	              </td>
 	            </tr>
           </tfoot>
 		</table>
