--- a/template/iCMS/mobile/user/profile/setpassword.htm
+++ b/template/iCMS/mobile/user/profile/setpassword.htm
@@ -1,42 +1,35 @@
-<div id="user_form" class="profile_password">
-    <form id="resetpassword" action="<!--{iCMS:router url='/user'}-->" method="post" target="iCMS_FRAME">
+<h3 class="title"> <span>修改密码</span> </h3>
+<div class="profile_password">
+    <form class="form-inline" role="form" id="resetpassword" action="<!--{iCMS:router url='/user'}-->" method="post" target="iCMS_FRAME">
       <input name="action" type="hidden" value="profile" />
       <input name="pg" type="hidden" value="setpassword" />
-      <div class="title"> <span>修改密码</span> </div>
       <dl>
         <dt>现在的密码：</dt>
         <dd>
-          <input name="oldPwd" class="gray_text r5" type="password" value="">
+          <input name="oldPwd" class="form-control" type="password" value="">
         </dd>
         <dt>新的密码：</dt>
         <dd>
-          <input id="password" name="newPwd1" class="gray_text r5" type="password" data-errormsg="密码长度应为6~16个字符">
-          <span class="tip" style="">密码长度应为6~16个字符</span>
-          <div class="level" style="display:none">
-            <div class="l01 li"><span class="ls current">弱</span></div>
-            <div class="l02 li"><span class="ls">中</span></div>
-            <div class="l03 li"><span class="ls">强</span></div>
-          </div>
+          <input id="password" name="newPwd1" class="form-control" type="password" data-errormsg="密码长度应为6~16个字符">
+          <span class="help-block">密码长度应为6~16个字符</span>
         </dd>
         <dt>确认新的密码：</dt>
         <dd>
-          <input name="newPwd2" class="gray_text r5" type="password" value="">
+          <input name="newPwd2" class="form-control" type="password" value="">
         </dd>
-        <dt>验证码：</dt>
         <dd>
-            <input id="iCMS-reg-seccode" type="text" maxlength="4" name="seccode" class="iCMS_seccode">
+            <input type="text" placeholder="验证码" maxlength="4" name="seccode" id="iCMS-reg-seccode" class="iCMS_seccode form-control">
             <img src="<!--{iCMS:router url='/api/seccode'}-->" alt="验证码" class="iCMS_seccode_img r3"/>
             <a href="javascript:;" class="iCMS_seccode_text" style="float: none">换一张</a>
+            <span class="help-block seccode_tip">请输入图片中的字符!</span>
         </dd>
-        <dd class="clearfix mt20 pl40">
-          <input class="btn btn-primary btn-large" type="submit" value="确认修改">
-          <input class="btn" type="reset" value="取消">
+        <dd>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" data-loading-text='<i class="fa fa-spinner"></i> 提交中...'><i class="fa fa-check"></i> 确认修改</button>
         </dd>
       </dl>
     </form>
-    <!-- 修改部分结束 -->
   </div>
-  <script type="text/javascript">
+<script type="text/javascript">
 $(function(){
 	$("#resetpassword").submit(function(){
 		var oldPwd= $("[name='oldPwd']");
@@ -73,6 +66,7 @@ $(function(){
 			iCMS.alert("请输入验证码！");
 			return false;
 		}
+    $(".btn-block").button('loading');
 	})
 })
 </script>
