--- a/public/ui/iCMS.mobile-6.0.0.css
+++ b/public/ui/iCMS.mobile-6.0.0.css
@@ -1,33 +1,33 @@
 @import "normalize-3.0.1.css";
-/*Windows Phone 8*/
-@-webkit-viewport   { width: device-width; }
-@-moz-viewport      { width: device-width; }
-@-ms-viewport       { width: device-width; }
-@-o-viewport        { width: device-width; }
-@viewport           { width: device-width; }
-
+/* Windows Phone 8 */
+@-webkit-viewport { width: device-width; }
+@-moz-viewport { width: device-width; }
+@-ms-viewport { width: device-width; }
+@-o-viewport { width: device-width; }
+@viewport { width: device-width; }
 /* bootstrap3 fix */
 .input-group .has-switch, .input-group .has-switch span.switch-left { -webkit-border-top-left-radius: 0; -webkit-border-bottom-left-radius: 0; -moz-border-radius-topleft: 0; -moz-border-radius-bottomleft: 0; border-top-left-radius: 0; border-bottom-left-radius: 0; }
 /* ********* */
 body, button, input, select, textarea { color: #111; font: 14px/1.75 Helvetica, STHeiti, Droid Sans Fallback }
 body { color: #2a2a2a; font-size: 14px; background-color: #f8f8f8; }
+#iCMS-scrollUp { display: none; bottom: 20px; right: 10px; height: 40px; width: 40px; line-height: 40px; position: fixed; }
+.iCMS-mobile .container { padding: 0px; }
+.iCMS-mobile .container .wrapper { background-color: #F8F8F8; padding: 10px; min-height: 400px; }
+.iCMS-mobile dd .form-control{height: 40px; font-size: 16px;}
+.iCMS-mobile h3.title { border-radius: 3px; background-color: #e8e8e8; height: 30px; line-height: 30px; padding-left: 10px; margin-bottom: 10px; }
+.iCMS-mobile h3.title span { color: #70A700; font-size: 14px; font-weight: bold; height: 30px; line-height: 30px; }
+
 .r3 { border-radius: 3px }
 .r5 { border-radius: 5px }
 .shadow { box-shadow: 0 6px 5px rgba(0, 0, 0, 0.4); }
 .gr-btn { color: #fff; background-color: #5cb85c; border-color: #4cae4c; }
-.form-actions { padding: 19px 20px 20px; margin-top: 20px; margin-bottom: 20px; background-color: #f5f5f5; border-top: 1px solid #e5e5e5; }
-.iCMS-mobile .container { padding: 0px; }
-.iCMS-mobile .container .wrapper { background-color: #F8F8F8; padding: 10px; min-height: 400px; }
 .circle { font-size: 18px; width: 50px; text-align: center; cursor: pointer; display: block; line-height: 50px; border-radius: 50px; background-color: #666; position: absolute; color: #fff; }
 a.circle { color: #fff; }
-#iCMS-scrollUp { display: none; bottom: 20px; right: 10px; height: 40px; width: 40px; line-height: 40px; position: fixed; }
-h3.title { border-radius: 3px; background-color: #e8e8e8; height: 30px; line-height: 30px; padding-left: 20px; margin-bottom: 10px; }
-h3.title span { color: #70A700; font-size: 14px; font-weight: bold; height: 30px; line-height: 30px; }
+.form-actions { padding: 19px 20px 20px; margin-top: 20px; margin-bottom: 20px; background-color: #f5f5f5; border-top: 1px solid #e5e5e5; }
 /* 下拉加载图片 */
 #infscr-loading { display: block; }
 #infscr-loading img { display: none }
 .loading_wrap { padding: 10px 0; margin-bottom: 10px; text-align: center; color: #888; font-size: 16px }
-
 #header { margin-bottom: 0px; border-bottom: 1px solid #ddd; background-color: #EEEEEE; }
 #header .header-title { line-height: 44px; font-size: 20px; text-align: center; width: 100%; display: block; }
 #header .header-back { background-color: transparent; float: left; border-color: #ddd; margin-top: 8px; margin-left: 10px; margin-bottom: 8px; }
@@ -66,7 +66,7 @@ h3.title span { color: #70A700; font-size: 14px; font-weight: bold; height: 30px
 .iCMS_profile_wrap .iCMS_user_home .label { font-size: 14px; margin-left: 4px; padding: 0px 5px; max-width: 100px !important; overflow: hidden; display: block; margin-top: 6px; float: left; height: 30px; line-height: 30px; }
 .iCMS_profile_wrap .iCMS_user_home .caret { color: #fff; }
 .iCMS_profile_wrap .dropdown-menu { margin-top: 2px; }
-.iCMS_profile_wrap .dropdown-menu i{font-size: 16px;margin-right: 5px;}
+.iCMS_profile_wrap .dropdown-menu i { font-size: 16px; margin-right: 5px; }
 .iCMS_profile_wrap .dropdown-menu:before { position: absolute; top: -7px; left: 9px; display: inline-block; border-right: 7px solid transparent; border-bottom: 7px solid #ccc; border-left: 7px solid transparent; border-bottom-color: rgba(0, 0, 0, 0.2); content: ''; }
 .iCMS_profile_wrap .dropdown-menu:after { position: absolute; top: -6px; left: 10px; display: inline-block; border-right: 6px solid transparent; border-bottom: 6px solid #fff; border-left: 6px solid transparent; content: ''; }
 .iCMS_profile_wrap .dropdown-menu>li>a { padding: 8px 20px; font-size: 18px; }
@@ -101,7 +101,8 @@ h3.title span { color: #70A700; font-size: 14px; font-weight: bold; height: 30px
 /* userApp */
 #iCMS-userApp { padding: 0px; max-width: 900px; }
 #iCMS-userApp .userApp_header { position: relative; height: 360px; }
-#iCMS-userApp .userApp_cover { width: 100%; height: 300px; max-width: inherit; overflow: hidden; background: url(coverpic.jpg) no-repeat 0 0; border-bottom: solid #ddd 1px; /* -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);  */ }
+#iCMS-userApp .userApp_cover { width: 100%; height: 300px; max-width: inherit; overflow: hidden; border-bottom: solid #ddd 1px; background-color: #eee;}
+#iCMS-userApp .userApp_cover img{height: 300px; max-width: inherit; }
 #iCMS-userApp .userApp_name { position: absolute; right: 120px; bottom: 62px; }
 #iCMS-userApp .userApp_name a { color: #fff; font-size: 18px; font-weight: bold; -webkit-text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.8); text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.8); }
 #iCMS-userApp .userApp_avatar { position: absolute; bottom: 20px; right: 20px; }
@@ -120,8 +121,35 @@ h3.title span { color: #70A700; font-size: 14px; font-weight: bold; height: 30px
 #iCMS-userApp .userApp_day .content .title { margin-right: 5px; }
 #iCMS-userApp .userApp_day .content .title a { display: block; }
 #iCMS-userApp .userApp_day .content .title.npic { background-color: #e8e7e7; padding: 4px 8px; }
-#iCMS-userApp #infscr-loading{padding: 5px 20px;}
+#iCMS-userApp #infscr-loading { padding: 5px 20px; }
+/* manage */
+.iCMS-mobile .manage_wrapper { }
+.iCMS-mobile .manage_wrapper h4.title { background-color: #428bca; width: 100%; height: 30px; line-height: 30px; padding-left: 20px; margin-bottom: 10px; color: #fff; border-radius: 5px; }
+.iCMS-mobile .profile_wrapper {}
+.iCMS-mobile .profile_wrapper dl dt{margin-bottom: 10px;}
+.iCMS-mobile .profile_wrapper dl dd{margin-bottom: 10px;}
+.iCMS-mobile .profile_wrapper dl dd .form-control{padding: 6px 10px !important;}
+
+
+/* dialog box */
+.iCMS_report_dialog { width: 320px; }
+.iCMS_pm_dialog { width: 320px; }
+.iCMS_favorite_dialog { width: 320px; }
 /* media */
+/* @media (max-width:480px) {
+}
+@media (min-width:481px) and (max-width:767px) {
+}
+@media (max-width:600px) {
+}
+@media (max-width:767px) {
+}
+@media (min-width:768px) and (max-width:979px) {
+}
+@media (max-width:979px) {
+}
+*/
+
 @media (min-width:768px) {
 	.navbar-toggle { display: block; }
 	.navbar-nav { margin-top: 10px; }
@@ -160,7 +188,8 @@ h3.title span { color: #70A700; font-size: 14px; font-weight: bold; height: 30px
 .article_list .full .thumb img { display: inline-block; width: 100%; margin: 0 auto; vertical-align: middle; }
 .article_list .full p { padding: 0 0 0 5px; line-height: 17px; font-size: 0.8125em; word-wrap: break-word; overflow: hidden; max-height: 34px; color: #878c92; }
 .article_list .full .count { height: 17px; line-height: 17px; display: inline-block; text-align: right; float: right; }
-/*.article_list .full .count i { display: inline-block; font-size: 0.6875em; font-family: Helvetica; color: #878c92; font-style: normal; }*/
+/* .article_list .full .count i { display: inline-block; font-size: 0.6875em; font-family: Helvetica; color: #878c92; font-style: normal; }
+*/
 /* 漂浮在上面 */
 /* .article_list .panel-heading { position: relative; }
 .article_list .category { position: absolute; top: -20px; left: 0px; display: block; }
@@ -190,7 +219,7 @@ article .info .fs_btn { float: right; width: 26px; height: 26px; padding: 3px; }
 article .article_tags a.tag { margin-left: 10px; }
 article .article_body { font-size: 16px; color: #565656; }
 article .article_body.font_big { font-size: 20px }
-article .article_body img { display: block; margin: 5px auto 0; text-align: center; max-width: 100%; height: auto !important }
+article .article_body img { -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; display: block; margin: 5px auto 0; text-align: center; max-width: 100%; height: auto !important }
 article .article_body p { margin-top: 10px }
 article .article_body p embed { max-width: inherit; width: 100%; }
 article .article_body .list-group-item-heading { color: #87b32e; background-color: #F8F8F8; padding: 2px 15px; height: 30px; line-height: 30px; overflow: hidden; }
