--- a/public/ui/iCMS.user-6.0.0.css
+++ b/public/ui/iCMS.user-6.0.0.css
@@ -20,7 +20,7 @@ body { background-color: #fff; background-image: url(img/bg-v6.png); _background
 .icon_edit { display: inline-block; width: 91px; height: 71px; background: url(img/home_edit.png) no-repeat top left; }
 .icon_setting { display: inline-block; width: 78px; height: 71px; background: url(img/home_setting.png) no-repeat top left; }
 /* ------home.header---------- */
-.userApp_header { background: none repeat scroll 0 0 #FFF; }
+.userApp_header { background: none repeat scroll 0 0 #FFF; border-bottom: 1px solid #E4E4E4;}
 .card_top { height: 64px; line-height: normal; position: relative; *z-index: 1001; padding: 5px 0 10px 100px; }
 .card_info { padding: 10px 0; width: 400px; float: left; }
 .card_data { margin: 0; overflow: hidden; border: none; }
@@ -101,25 +101,15 @@ body { background-color: #fff; background-image: url(img/bg-v6.png); _background
 .userApp-box .sidebar a.c { font-weight: bold; }
 .userApp-box .sidebar a { padding: 0 10px; line-height: 28px; font-size: 14px; }
 .userApp-box .contents { font-size: 14px; width: 710px; margin-left: 35px; margin-top: 22px; }
-.userApp-box #user_form { position: relative; }
-.userApp-box #user_form dl { margin-bottom: 12px; }
-.userApp-box #user_form dd { float: left; width: 105px; text-align: right; line-height: 26px; vertical-align: middle; color: #666; }
-.userApp-box #user_form dt { margin-bottom: 12px; font-size: 12px; color: #666; font-weight: normal; }
 .userApp-box .iner { _padding-top: -50px; display: inline; *vertical-align: 10px; }
 .userApp-box .title { background: url(img/profile_title_bg.png) no-repeat; width: 100%; height: 30px; line-height: 30px; padding-left: 20px; margin-bottom: 10px; }
 .userApp-box .title span { color: #70A700; font-size: 14px; font-weight: bold; height: 30px; line-height: 30px; }
 .userApp-box .w670 { width: 670px; margin-left: 5px; }
-#profile_box .base select { width: 90px; font-size: 14px; }
-#profile_box .base textarea { height: 120px; width: 466px; border: 1px solid #cfcfcf; color: #666; padding: 5px; }
-#profile_box .unick span { color: #f00; margin-left: 10px; margin-right: 5px; font-weight: bold; }
-#profile_box .unick { font-size: 12px; }
-#profile_box .pstyle, #profile_box .weibo input { width: 365px; }
-#profile_box .is_show_sel { margin-top: 2px; float: right; margin-top: -23px\9; font-size: 12px !important; width: 100px !important; height: 25px !important; }
-#profile_box .tags_list { width: 355px; border: 1px #CFCFCF solid; overflow: hidden; border-radius: 3px; padding: 10px; position: absolute; left: 105px; background-color: #fff; display: none; top: 30px; _left: 0; }
-#profile_box .tags_list .tag { width: 330px; float: left; }
-#profile_box .tags_list .close { background: url(img/twitter_light_box_bg.png) no-repeat left bottom; width: 11px; height: 11px; margin: 5px 5px 0 0; float: right; }
-#profile_box .tags_list .tag a { color: #690; font-size: 12px; cursor: pointer; padding: 2px 4px; white-space: nowrap; }
-#profile_box .tags_list .tag a:hover { text-decoration: underline; }
+
+.userApp-box .profile_wrapper { position: relative; }
+.profile_wrapper dl { margin-bottom: 12px; }
+.profile_wrapper dt { float: left; width: 105px; text-align: right; line-height: 26px; vertical-align: middle; color: #666;font-weight:normal; }
+.profile_wrapper dd { margin-bottom: 12px; font-size: 12px; color: #666; font-weight: normal; }
 /* -----profile.bind---------- */
 .account_bind .account_bind_title { height: 30px; line-height: 30px; background: #f7f7f7; padding: 0 15px; border-radius: 8px; color: #666; }
 .account_bind .bind_logo { margin-top: 5px; overflow: hidden; zoom: 1; }
