--- a/template/iCMS/public.common.htm
+++ b/template/iCMS/public.common.htm
@@ -37,98 +37,4 @@
       </div>
     </div>
 </div>
-<div id="iCMS-report-box">
-    <div class="iCMS_report_dialog">
-      <div class="header">请选择理由</div>
-      <ul class="options clearfix">
-        <li>
-          <label>
-            <input value="1" name="reason" type="radio">
-            不友善内容</label>
-        </li>
-        <li>
-          <label>
-            <input value="2" name="reason" type="radio">
-            广告等垃圾信息</label>
-        </li>
-        <li>
-          <label>
-            <input value="3" name="reason" type="radio">
-            违法违规内容</label>
-        </li>
-        <li>
-          <label>
-            <input value="4" name="reason" type="radio">
-            不宜公开讨论的政治内容</label>
-        </li>
-        <li>
-          <label>
-            <input value="0" name="reason" type="radio">
-            其他（可自行填写）</label>
-          <p class="input-container visible-if-checked">
-            <input placeholder="请填写原因" type="text" name="content" class="reason-text zg-form-text-input">
-          </p>
-        </li>
-      </ul>
-      <div class="buttons clearfix"> <a class="cancel">取消</a>
-        <button type="button" name="ok" class="btn btn-primary">确定</button>
-      </div>
-    </div>
-</div>
-<div id="iCMS-pm-box">
-    <div class="iCMS_pm_dialog">
-      <dl>
-        <dt>
-          <label>发给：</label>
-        </dt>
-        <dd> <a class="pm_inbox" href="javascript:;">私信记录 »</a>
-          <p class="pm_uname"></p>
-        </dd>
-        <div class="clearfix mt10"></div>
-        <dt>
-          <label>内容：</label>
-        </dt>
-        <dd>
-          <textarea class="pm_content" name="content"></textarea>
-        </dd>
-        <div class="pm_warnmsg clearfix">请填写私信内容。</div>
-      </dl>
-      <div class="buttons clearfix mt15"> <a class="cancel">取消</a>
-        <button type="button" name="send" class="btn btn-primary">发送</button>
-      </div>
-    </div>
-</div>
-<div id="iCMS-favorite-box">
-    <div class="iCMS_favorite_dialog">
-      <div class="favorite_list">
-        <div class="favorite_list_content">
-          <img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......
-        </div>
-        <div class="buttons clearfix mt15">
-          <a class="create fl" href="javascript:;">+ 创建收藏夹</a>
-          <button type="button" name="favorite" class="cancel btn btn-primary">关闭</button>
-        </div>
-      </div>
-      <div class="favorite_create hide">
-        <div class="favorite_create_content">
-          <label style="display: inline;">标题</label><span class="fav_add_title_error">请填写标题</span>
-          <input type="text" name="title" class="input-text span5" placeholder="最多输入20字">
-          <label>描述（可选）</label>
-          <textarea name="description" class="input-text span5" placeholder="最多输入256字" style="height: 66px;"></textarea>
-          <div class="clearfix mt10"></div>
-          <label class="radio">
-            <input type="radio" name="mode" value="1" checked>
-            <b> 公开 </b><span class="gray">公开后不能设置为私密</span>
-          </label>
-          <label class="radio">
-            <input type="radio" name="mode" value="0">
-            <b> 私密 </b><span class="gray">只有你可以查看这个收藏夹</span>
-          </label>
-        </div>
-        <div class="buttons clearfix mt15">
-          <a class="cancel_create mr20" href="javascript:;">取消</a>
-          <button type="button" name="create" class="btn btn-primary">确认创建</button>
-        </div>
-      </div>
-    </div>
-</div>
+<!--{include file="/iCMS/public.dialog.htm"}-->
