--- a/template/iCMS/user/manage/comment.htm
+++ b/template/iCMS/user/manage/comment.htm
@@ -10,10 +10,10 @@
         <tbody>
           <!--{iCMS:comment:list loop="true" page="true" row="10" total_cache="G" userid=$user.uid}-->
           <tr id="id-<!--{$comment_list.id}-->">
-            <td class="avatar_35"><a title="<!--{$comment_list.user.name}-->" href="<!--{$comment_list.user.url}-->">
+            <td class="avatar_35"><a title="<!--{$comment_list.user.name}-->" href="<!--{$comment_list.user.url}-->" data-tip="iCMS:ucard:<!--{$comment_list.user.uid}-->">
                 <img class="iCMS_user_avatar avatar_35" src="<!--{$comment_list.user.avatar}-->" onerror="iCMS.user.noavatar();">
               </a></td>
-            <td><a href="<!--{$comment_list.user.url}-->" target="_blank"><span class="label label-info"><!--{$comment_list.user.name}--></span></a> 在<!--{$iAPP[$comment_list.appid].title}-->：<a href="<!--{$comment_list.url}-->" target="_blank"><!--{$comment_list.title}--></a>
+            <td>您 在<!--{$iAPP[$comment_list.appid].title}-->：<a href="<!--{$comment_list.url}-->" target="_blank"><!--{$comment_list.title}--></a>
               <!--{if $comment_list.reply_uid}-->
               对<span class="label label-success"><!--{$comment_list.reply_name}--></span>的回帖发表评论
               <!--{else}-->
