--- a/template/iCMS/user/profile.htm
+++ b/template/iCMS/user/profile.htm
@@ -12,7 +12,7 @@
 <body>
   <!--{include file="{iTPL}/header.htm"}-->
   <div id="body_wrap" class="clearfix">
-    <div class="userApp-box" id="profile_box">
+    <div class="userApp-box">
       <div class="piece">
         <div class="piece_hd"> <b class="hl"></b> <b class="hr"></b> </div>
         <div class="piece_bd clearfix">
@@ -26,19 +26,19 @@
             </div>
           </div>
           <div class="contents fl">
-            <div id="user_form"> 
-              <!--{switch from=$pg}--> 
-              <!--{case value="base"}--> 
-              <!--{include file="./profile/base.htm" import="true"}--> 
-              <!--{case value="avatar"}--> 
-              <!--{include file="./profile/avatar.htm" import="true"}--> 
-              <!--{case value="setpassword"}--> 
-              <!--{include file="./profile/setpassword.htm" import="true"}--> 
-              <!--{case value="bind"}--> 
-              <!--{include file="./profile/bind.htm" import="true"}--> 
-              <!--{case value="custom"}--> 
-              <!--{include file="./profile/custom.htm" import="true"}--> 
-              <!--{/switch}--> 
+            <div class="profile_wrapper">
+              <!--{switch from=$pg}-->
+              <!--{case value="base"}-->
+              <!--{include file="./profile/base.htm" import="true"}-->
+              <!--{case value="avatar"}-->
+              <!--{include file="./profile/avatar.htm" import="true"}-->
+              <!--{case value="setpassword"}-->
+              <!--{include file="./profile/setpassword.htm" import="true"}-->
+              <!--{case value="bind"}-->
+              <!--{include file="./profile/bind.htm" import="true"}-->
+              <!--{case value="custom"}-->
+              <!--{include file="./profile/custom.htm" import="true"}-->
+              <!--{/switch}-->
             </div>
           </div>
         </div>
