--- a/public/ui/iCMS.mobile-6.0.0.css
+++ b/public/ui/iCMS.mobile-6.0.0.css
@@ -32,7 +32,7 @@ a.circle { color: #fff; }
 #header .header-title { line-height: 44px; font-size: 20px; text-align: center; width: 100%; display: block; }
 #header .header-back { background-color: transparent; float: left; border-color: #ddd; margin-top: 8px; margin-left: 10px; margin-bottom: 8px; }
 #header .header-back i { color: #888; font-size: 18px; }
-#header.affix { width: 100%; box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3); z-index: 999; }
+#header.affix { width: 100%; box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.3); z-index: 999; }
 .search-toggle { border: none; color: #333; background-color: #eee; position: relative; float: right; margin: 10px 10px 0px 0px; width: 40px; line-height: 32px; height: 32px; font-size: 18px; }
 
 /* navbar.htm */
